# Canta

./: .gitignore  CMakeLists.txt  README.md  embed_files.py
.forgejo/workflows/: run_build.yaml
.zed/: settings.json  tasks.json
examples/: CMakeLists.txt  example.pipeline  hello.slang  hello_noise.cpp  hello_particles.cpp  hello_rays.cpp  hello_raytrace.slang  hello_sort.cpp  hello_triangle.cpp  hello_upload.cpp  matrix_multiply.cpp  matrix_multiply.slang  multi_sort.slang  multi_sort_histograms.slang  particles.comp  particles.slang  particles_update.pipeline  prefix_sum.cpp  sort.slang
include/Canta/: Buffer.h  Camera.h  CommandBuffer.h  CommandPool.h  Device.h  Enums.h  ImGuiContext.h  Image.h  Pipeline.h  PipelineManager.h  PipelineStatistics.h  Queue.h  RenderGraph.h  RenderGraphDebugger.h  RenderGraphV2.h  ResourceList.h  SDLWindow.h  Sampler.h  Semaphore.h  ShaderInterface.h  ShaderModule.h  Swapchain.h  Timer.h  UploadBuffer.h  Window.h  canta.glsl  util.h
include/Canta/debug/: CommandQueueDebugger.h  PipelineManagerDebugger.h  RenderGraphDebugger.h  ui.h
include/Canta/util/: KernelHelper.h  prefixSum.h  random.h  sort.h
src/: Buffer.cpp  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  Device.cpp  ImGuiContext.cpp  Image.cpp  Pipeline.cpp  PipelineManager.cpp  PipelineStatistics.cpp  Queue.cpp  RenderGraph.cpp  RenderGraphDebugger.cpp  RenderGraphV2.cpp  SDLWindow.cpp  Sampler.cpp  Semaphore.cpp  ShaderInterface.cpp  ShaderModule.cpp  Swapchain.cpp  Timer.cpp  UploadBuffer.cpp  canta.slang  imgui.slang  util.cpp
src/debug/: CommandQueueDebugger.cpp  PipelineManagerDebugger.cpp  RenderGraphDebugger.cpp  ui.cpp
src/util/: multi_sort.slang  multi_sort.spv  multi_sort_histograms.slang  multi_sort_histograms.spv  perlin_noise.slang  prefixSum.cpp  prefix_sum.slang  random.cpp  random_list.slang  random_noise.slang  single_sort.spv  sort.cpp  sort.slang  sort.spv
tests/: CMakeLists.txt  tests.cpp
